--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
-    "sockjs-client": "^1.4.0"
+    "sockjs-client": "^1.4.0",
+    "typeface-montserrat": "0.0.75"
   },
   "scripts": {
     "start": "serve -s build",
