--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.organization=<add org here>
-sonar.projectKey=<add project key here>
+sonar.organization=<soprafs20-group9>
+sonar.projectKey=<soprafs20-group09_frantic-server>
 sonar.sources=./src
