--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.organization=<soprafs20-group9>
-sonar.projectKey=<soprafs20-group09_frantic-server>
+sonar.organization=soprafs20-group09
+sonar.projectKey=soprafs20-group09_frantic-server
 sonar.sources=./src
