Added first networking to CreateLobbyView, added Spinner

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
     "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "typeface-montserrat": "0.0.75"
   },
   "scripts": {
