--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-draggable": "^4.3.1",
     "react-emoji-render": "^1.2.2",
     "react-inlinesvg": "^1.2.0",
     "react-router-dom": "^5.1.2",
