--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-draggable": "^4.3.1",
     "react-emoji-render": "^1.2.2",
     "react-inlinesvg": "^1.2.0",
+    "react-particles-js": "^3.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
