--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "3.4.0",
     "react-spring": "^8.0.27",
     "react-string-replace": "^0.4.4",
+    "react-visibility-sensor": "^5.1.1",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
     "typeface-montserrat": "0.0.75"
