--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "engines": {
+    "node": "15.x"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
